--- a/BeersApi/src/main/resources/application.properties
+++ b/BeersApi/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=a321de23#!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.path=/swagger
